<resources>
    <string name="app_name">lalaland</string>
    <string name="my_app_name">Lalaland</string>
    <string name="title_home">Home</string>
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="wish">Wishlist</string>
    <string name="wish_items">Wishlist</string>
    <string name="account">Account</string>
    <string name="title_activity_registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date Of Birth (optional)</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_not">Not to Specify</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_terms_info"><![CDATA[By clicking Sign Up, You agree to \nthe terms & conditions]]></string>
    <string name="connect_via">Or connect Via</string>
    <string name="facebook_app_id">222630931805793</string>
    <string name="facebook_app_scheme">fb222630931805793</string>
    <string name="picks_of_the_week">PICKS OF THE WEEK</string>
    <string name="view_all">View All</string>
    <string name="brands_in_focus">BRANDS IN FOCUS</string>
    <string name="recommendations">RECOMMENDATIONS</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="title_activity_product_listing">ProductListingActivity</string>
    <string name="sort_by">SORT</string>
    <string name="sort">SORT BY</string>
    <string name="filter_by">FILTER</string>
    <string name="choose">Choose..</string>
    <string name="a_z">A - Z</string>
    <string name="z_a">Z - A</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="high_to_low">High To Low</string>
    <string name="low_to_high">Low To High</string>
    <string name="title_activity_checkout_screen">CheckoutScreen</string>
    <string name="cart_items">Cart Items</string>
    <string name="edit_change">Edit / Change</string>
    <string name="cash_on_delivery">CASH ON DELIVERY</string>
    <string name="bank_transfer">BANK TRANSFER</string>
    <string name="cash_on_delivery_policy">Cash on delivery is not applicable on order exceeding RS 40,000</string>
    <string name="checkout">CHECKOUT</string>
    <string name="add_new_address">Add New Address</string>
    <string name="select_shipping_address">Select Shipping Address</string>
    <string name="add_new_add_btn">+ Add new address</string>
    <string name="default_address">Make this my default address</string>
    <string name="save">Save</string>
    <string name="cancel">cancel</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="account_information">Account Information</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="name">Name: </string>
    <string name="edit_information">Edit Information</string>
    <string name="title_activity_select_city">SelectCityActivity</string>
    <string name="buy_now">Buy Now</string>
    <string name="addition_charge_policy">Additional charges may apply at checkout time.</string>
    <string name="product_details">PRODUCT DETAILS</string>
    <string name="material_and_care"><![CDATA[MATERIAL & CARE]]></string>
    <string name="all">All</string>
    <string name="lalaland">lalaland</string>
    <string name="size">Size:</string>
    <string name="size_without_colon">Size</string>
    <string name="quantity">Quantity</string>
    <string name="qty">Qty:</string>
    <string name="done">Done</string>
    <string name="my_orders">My Orders</string>
    <string name="confirmed">Confirmed</string>
    <string name="received">Received</string>
    <string name="in_transit">In Transit</string>
    <string name="cancelled">Cancelled</string>
    <string name="new_order">New</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="title_activity_order_listing">OrderListingActivity</string>
    <string name="order_id">Order ID:</string>
    <string name="date_time"><![CDATA[Date & Time :]]></string>
    <string name="merchant">Merchant :</string>
    <string name="total">Total</string>
    <string name="title_activity_order_detail">OrderDetailActivity</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="order_id_format">Order Id: %1$s </string>
    <string name="order_date_format">Order Date: %1$s </string>
    <string name="order_merchant_format">Merchant: %1$s </string>
    <string name="order_detail">Order Detail</string>
    <string name="order_received">Order Received</string>
    <string name="order_placed_successful"> Your order has been placed successfully</string>
    <string name="total_amount">Total Amount</string>
    <string name="track_order">Track Order</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="your_order_will_be_deliver_within_5_to_7_working_days">Your order will be deliver within 5 to 7 working days</string>
    <string name="search_lalaland">Search lalaland</string>
    <string name="find_your_next_favourite_thing">Find your next favourite thing</string>
    <string name="search_history">Search History</string>
    <string name="clear_all">Clear All</string>
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="pkr">PKR</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="reload">Reload</string>
    <string name="action_tag">1</string>
    <string name="pick_of_week_tag">2</string>
    <string name="banner_circle_tag">3</string>
    <string name="login_to_view_wishlist_items">Login to view wishlist items</string>
    <string name="delivery_option">Delivery Options</string>
    <string name="city_name">City Name</string>
    <string name="select">Select</string>
    <string name="payment_info_detail"><![CDATA[Please enter your city to check delivery rate & time along with available payment options.]]></string>
    <string name="product_return_exchange"><![CDATA[100% original product\nProduct will be deliver with in 5 to 7 working days\nEasy 7 days return & 7 days exchange]]></string>
    <string name="sold_by">Sold by:  </string>
    <string name="product_code">Product code:  </string>
    <string name="delivery_charges_option">Delivery charges are Rs %1$s</string>
    <string name="price_detail">Price Detail</string>
    <string name="order_total">Order Total</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="total_charges">Total Charges</string>
    <string name="order_summary">Order Summary</string>
    <string name="select_city">Select City</string>
    <string name="no_item_found_in_your_list">No items found in your list</string>
    <string name="no_item_found_in_your_cart">No items found in your cart</string>
    <string name="payment_method">Payment Method</string>
    <string name="change">change</string>
    <string name="title_activity_change_payment">ChangePaymentActivity</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="mobile">Mobile  :</string>
    <string name="title_activity_change_shipping_address">ChangeShippingAddress</string>
    <string name="make_this_default">Make This Default</string>
    <string name="note">Note</string>
    <string name="your_order_amount_is_exceeding_pkr_40_000_so_you_can_not_select_cash_on_delivery">Your order amount is exceeding PKR 40,000 so you can not select CASH ON DELIVERY</string>
    <string name="exit_info">Do you really want to close application ?</string>
    <string name="yes">Yes</string>
    <string name="out_of_stock">The following items are no longer in stock</string>
    <string name="app_suggestions">App Suggestions</string>
    <string name="contact_us">Contact Us</string>
    <string name="return_refund"><![CDATA[Return & Refund]]></string>
    <string name="blogs">Blogs</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="linkedin">LinkedIn</string>
    <string name="client_id">122765248262-03m7dmonpdot2a59ertdtovcgkja4sq5.apps.googleusercontent.com</string>
    <string name="best_match">Best Match</string>
    <string name="my_photo">My Photo</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="reset_password_text">Enter your email to reset \nyour password</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="enter_your_password">Enter your new password for </string>
    <string name="new_address">+New Address</string>
    <string name="order_placed">Order Placed</string>
    <string name="user_default_address">Default Address</string>
    <string name="add_number">Add Mobile Number</string>
    <string name="mobile_number_03">Mobile Number (03*********)</string>
    <string name="you_need_to_add_new_address_to_place_nthe_new_order">You need to add new address to place the new order</string>
    <string name="discount">Discount</string>
    <string name="enter_voucher_code">Enter Voucher Code</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="title_activity_introduction_screen">IntroductionScreenActivity</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="category_in_focus">CATEGORY IN FOCUS</string>
    <string name="address">Address</string>
    <string name="otp_not_receivedd">Didn\'t receive the PIN yet? RESEND after %1$d seconds</string>
    <string name="otp_not_receivedd_clicable">Didn\'t receive the PIN yet? RESEND after 00 seconds</string>
    <string name="confirm_order_later"><u>Confirm order later</u></string>
    <string name="view_size_chart">View Size Chart</string>
    <string name="size_chart">Size Chart</string>
    <string name="otp_info">We have sent you a 4 digit pin on your mobile number and email address. Kindly enter it below to instantly confirm your order</string>
    <string name="order_confirmation_via_sms_email">Order confirmation via SMS/EMAIL</string>
    <string name="verify_order">Verify Order</string>
    <string name="if_you_have_not_received_the_pin_you_can">If you have not received the PIN you can</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="title_activity_return_and_replacement">ReturnAndReplacementActivity</string>
    <string name="title_activity_my_claims">MyClaims</string>
    <string name="title_activity_claim_detail">ClaimDetail</string>
    <string name="what_do_you_think_about_this_product">What do you think about this Product?</string>
    <string name="login_to_add_review_and_rating">Login to add review and rating</string>
    <string name="insufficient_stock">Insufficient Stock</string>
    <string name="online_payment">Online payment</string>
    <string name="session_expires_in">Session Expires in</string>
</resources>