<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="listener"
            type="com.lalaland.ecommerce.views.activities.OrderReceivedActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".views.activities.OrderReceivedActivity">

        <RelativeLayout

            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView

                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:focusableInTouchMode="true"
                android:padding="@dimen/_16dp"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/cross_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/btn_back"
                android:fontFamily="@font/encodesansregular"
                android:padding="@dimen/_8dp"
                android:text="@string/order_received"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView

            android:id="@+id/sv_recomendation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout

                    android:id="@+id/top_bar_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8dp"
                        android:text="@string/order_placed"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_successful"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8dp"
                        android:text="@string/order_placed_successful"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <TextView

                    android:id="@+id/tv_total_amount_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_16dp"
                    android:text="@string/total_amount"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/top_bar_2" />

                <TextView

                    android:id="@+id/tv_total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_amount"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_total_amount_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_total_amount_title" />

                <LinearLayout

                    android:id="@+id/btns_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_12dp"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_total_amount">

                    <Button

                        android:id="@+id/btn_track_order"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40dp"
                        android:layout_margin="@dimen/_4dp"
                        android:layout_weight=".5"
                        android:background="@drawable/bg_round_corner_transparent_accent"
                        android:onClick="@{(view)->listener.trackOrder(view)}"
                        android:text="@string/track_order"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp" />

                    <Button

                        android:id="@+id/btn_continue_shopping"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_margin="@dimen/_4dp"
                        android:layout_weight=".5"
                        android:background="@drawable/btn_bg_round_corner_accent"
                        android:onClick="@{(view)->listener.continueShopping(view)}"
                        android:text="@string/continue_shopping"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                </LinearLayout>

                <TextView

                    android:id="@+id/tv_delivery_days"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_16dp"
                    android:fontFamily="@font/encodesansregular"
                    android:text="@string/your_order_will_be_deliver_within_5_to_7_working_days"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btns_container" />

                <androidx.constraintlayout.widget.Guideline

                    android:id="@+id/gl_recommendation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_percent=".4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout

                    android:id="@+id/recommendation_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_delivery_days">

                    <TextView

                        android:id="@+id/tv_recommendation_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8dp"
                        android:text="@string/recommendations"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView

                        android:id="@+id/rv_recommended_products"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_4dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_recommendation_title" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>